# Verl-Training

./: README.md  SETUP.md  apply_verl_patches.sh  pyproject.toml
patches/: verl-dp-actor.patch  verl-dp-critic.patch  verl-fsdp-workers.patch  verl-vllm-init.patch  verl-vllm-rollout.patch
piper/: hparams_entrypoint.py
piper/config/: envbench-graphs.yaml
piper/config/_custom/: universal_all_to_s3.yaml
piper/config/experiment/: llm-reward.yaml
piper/config/model/: custom-qwen3-4b.yaml
piper/config/reward/: llm-reward.yaml
piper/reward_score/envsetup/: llm_sandbox_reward.py
piper/reward_score/envsetup/sandbox_like_reward/: calc.py
piper/trainer/: multi_turn_main_ppo.py
